--- a/PRN231_Project/BE/BE.csproj
+++ b/PRN231_Project/BE/BE.csproj
@@ -10,4 +10,13 @@
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.2.3" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Lib\Lib.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Controllers\Course\" />
+    <Folder Include="Controllers\Question\" />
+  </ItemGroup>
+
 </Project>
