--- a/PRN231_Project/BE/appsettings.json
+++ b/PRN231_Project/BE/appsettings.json
@@ -7,11 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "Test": "server=DESKTOP-KP1A6KQ;database=PRN231_Project;Integrated Security=true;TrustServerCertificate=Yes"
-  },
-  "Jwt": {
-    "Key": "a_very_long_and_random_string_12345",
-    "Issuer": "abc",
-    "Audience": "abc"
+    "Test": "server=TUANNM\\SQLEXPRESS; database=PRN231_Project;user=sa;password=12345;Integrated Security=true;TrustServerCertificate=Yes"
   }
+  
 }
