Login with 3 role

--- a/PRN231_Project/BE/appsettings.json
+++ b/PRN231_Project/BE/appsettings.json
@@ -10,8 +10,8 @@
     "Test": "server=DESKTOP-KP1A6KQ;database=PRN231_Project;Integrated Security=true;TrustServerCertificate=Yes"
   },
   "Jwt": {
-    "Key": "a_very_long_and_random_string_12345",
-    "Issuer": "abc",
-    "Audience": "abc"
+    "Key": "ThisIsASecretKeyForJwt1234567890",
+    "Issuer": "https://connectedProgrammer.com",
+    "Audience": "https://connectedProgrammer.com"
   }
 }
