--- a/PRN231_Project/BE/appsettings.json
+++ b/PRN231_Project/BE/appsettings.json
@@ -7,7 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "Test": "server=DESKTOP-V4TQUU3; database=PRN231_Project;user=sa;password=12345;Integrated Security=true;TrustServerCertificate=Yes"
+    "Test": "server=TUANNM\\SQLEXPRESS; database=PRN231_Project;user=sa;password=12345;Integrated Security=true;TrustServerCertificate=Yes"
   },
   "Jwt": {
     "Key": "ThisIsASecretKeyForJwt1234567890",
