--- a/PRN231_Project/BE/appsettings.json
+++ b/PRN231_Project/BE/appsettings.json
@@ -13,6 +13,15 @@
     "Key": "ThisIsASecretKeyForJwt1234567890",
     "Issuer": "https://connectedProgrammer.com",
     "Audience": "https://connectedProgrammer.com"
+  },
+  "Google": {
+    "ClientId": "YOUR_ACTUAL_GOOGLE_CLIENT_ID",
+    "ClientSecret": "YOUR_ACTUAL_GOOGLE_CLIENT_SECRET"
+  },
+  "EmailSettings": {
+    "SmtpServer": "smtp.gmail.com",
+    "Port": 587,
+    "SenderEmail": "sangpthe170366@fpt.edu.vn",
+    "SenderPassword": "sangpham2003" //mk mail + bật ứng dụng kém an toàn 
   }
-  
 }
