--- a/PRN231_Project/BE/appsettings.json
+++ b/PRN231_Project/BE/appsettings.json
@@ -22,6 +22,6 @@
     "SmtpServer": "smtp.gmail.com",
     "Port": 587,
     "SenderEmail": "sangpthe170366@fpt.edu.vn",
-    "SenderPassword": "sangpham2003" //mk mail + bật ứng dụng kém an toàn 
+    "SenderPassword": "..." //mk mail + bật ứng dụng kém an toàn 
   }
 }
