--- a/PRN231_Project/BE/appsettings.json
+++ b/PRN231_Project/BE/appsettings.json
@@ -7,7 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "Test": "server=TUANNM\\SQLEXPRESS; database=PRN231_Project;user=sa;password=12345;Integrated Security=true;TrustServerCertificate=Yes"
+    "Test": "server=DESKTOP-KP1A6KQ; database=PRN231_Project;user=sa;password=12345678;TrustServerCertificate=Yes"
   },
   "Jwt": {
     "Key": "ThisIsASecretKeyForJwt1234567890",
@@ -22,6 +22,7 @@
     "SmtpServer": "smtp.gmail.com",
     "Port": 587,
     "SenderEmail": "sangpthe170366@fpt.edu.vn",
-    "SenderPassword": "..." //mk mail + bật ứng dụng kém an toàn 
+    "SenderPassword": "oynl dxkl yhfn tndx" //mk mail + bật ứng dụng kém an toàn 
+
   }
 }
