--- a/PRN231_Project/BE/appsettings.json
+++ b/PRN231_Project/BE/appsettings.json
@@ -22,7 +22,7 @@
     "SmtpServer": "smtp.gmail.com",
     "Port": 587,
     "SenderEmail": "sangpthe170366@fpt.edu.vn",
-    "SenderPassword": "..." 
+    "SenderPassword": "oynl dxkl yhfn tndx"
   },
   "TimeZoneId": "SE Asia Standard Time",
   "Vnpay": {
