update fix login authen and payment

--- a/PRN231_Project/BE/appsettings.json
+++ b/PRN231_Project/BE/appsettings.json
@@ -11,11 +11,11 @@
   },
   "Jwt": {
     "Key": "ThisIsASecretKeyForJwt1234567890",
-    "Issuer": "https://connectedProgrammer.com",
-    "Audience": "https://connectedProgrammer.com"
+    "Issuer": "http://localhost:5038",
+    "Audience": "http://localhost:5038"
   },
   "Google": {
-    "ClientId": "YOUR_ACTUAL_GOOGLE_CLIENT_ID",
+    "ClientId": "407408718192.apps.googleusercontent.com",
     "ClientSecret": "YOUR_ACTUAL_GOOGLE_CLIENT_SECRET"
   },
   "EmailSettings": {
@@ -35,6 +35,6 @@
     "Locale": "vn"
   },
   "PaymentCallBack": {
-    "ReturnUrl": "https://localhost:5001/Home/PaymentCallback"
+    "ReturnUrl": "https://localhost:3000/success"
   }
 }
