--- a/PRN231_Project/BE/appsettings.json
+++ b/PRN231_Project/BE/appsettings.json
@@ -7,7 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "Test": "server=TUANNM\\SQLEXPRESS; database=PRN231_Project;user=sa;password=12345;Integrated Security=true;TrustServerCertificate=Yes"
+    "Test": "server=DESKTOP-V4TQUU3; database=PRN231_Project;user=sa;password=12345;Integrated Security=true;TrustServerCertificate=Yes"
   },
   "Jwt": {
     "Key": "ThisIsASecretKeyForJwt1234567890",
@@ -15,8 +15,8 @@
     "Audience": "http://localhost:5038"
   },
   "Google": {
-    "ClientId": "407408718192.apps.googleusercontent.com",
-    "ClientSecret": "YOUR_ACTUAL_GOOGLE_CLIENT_SECRET"
+    "ClientId": "484867254185-k0m64ts4471rv8skph7qrucma0t3e84a.apps.googleusercontent.com",
+    "ClientSecret": "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"
   },
   "EmailSettings": {
     "SmtpServer": "smtp.gmail.com",
