--- a/PRN231_Project/BE/appsettings.json
+++ b/PRN231_Project/BE/appsettings.json
@@ -15,7 +15,7 @@
     "Audience": "https://connectedProgrammer.com"
   },
   "Google": {
-    "ClientId": "YOUR_ACTUAL_GOOGLE_CLIENT_ID",
+    "ClientId": "407408718192.apps.googleusercontent.com",
     "ClientSecret": "YOUR_ACTUAL_GOOGLE_CLIENT_SECRET"
   },
   "EmailSettings": {
