update: payment url

--- a/PRN231_Project/BE/appsettings.json
+++ b/PRN231_Project/BE/appsettings.json
@@ -35,6 +35,6 @@
     "Locale": "vn"
   },
   "PaymentCallBack": {
-    "ReturnUrl": "https://localhost:3000/success"
+    "ReturnUrl": "http://localhost:3000/success"
   }
 }
